@@ -1,4 +1,3 @@
-Format:
 01/27/2025
 Functionalities Added
     - Added functioning corridors
@@ -31,3 +30,5 @@ Bugs Discovered
     - Rooms are not listening to the border requirement
     - Rooms are all trying to generate stairs
     - Illegal corridors are being generated
+
+--BEGIN CHANGELOG FOR DUNGEON ASSIGNMENT--
